--- a/package.json
+++ b/package.json
@@ -1,22 +1,20 @@
 {
   "name": "galvanize-reads",
-  "version": "1.0.0",
-  "description": "Put your summary here!",
-  "main": "index.js",
-  "directories": {
-    "test": "test"
-  },
+  "version": "0.0.0",
+  "private": true,
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node ./bin/www"
   },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/kelleghan1/galvanize-reads.git"
-  },
-  "author": "",
-  "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/kelleghan1/galvanize-reads/issues"
-  },
-  "homepage": "https://github.com/kelleghan1/galvanize-reads#readme"
+  "dependencies": {
+    "body-parser": "~1.13.2",
+    "cookie-parser": "~1.3.5",
+    "debug": "~2.2.0",
+    "express": "~4.13.1",
+    "hbs": "~3.1.0",
+    "knex": "^0.10.0",
+    "morgan": "~1.6.1",
+    "pg": "^4.5.2",
+    "seed": "^0.4.4",
+    "serve-favicon": "~2.3.0"
+  }
 }
